--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 ﻿<!DOCTYPE html>
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]>
-<!--><html class="no-js" lang="en"><!--<![endif]-->
+<!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Home</title>
-	<meta name="description"  content="Chinmay Mulay's Portfolio" />
+	<meta name="description" content="Chinmay Mulay's Portfolio" />
 	<meta name="author" content="Chinmay Mulay">
-	<meta name="keywords"  content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
+	<meta name="keywords"
+		content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
 	<meta property="og:title" content="Chinmay Mulay's Portfolio" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="" />
@@ -28,22 +32,26 @@
 	<!-- Mobile Specific Metas
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="theme-color" content="#212121"/>
-    <meta name="msapplication-navbutton-color" content="#212121"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="#212121"/>
+	<meta name="theme-color" content="#212121" />
+	<meta name="msapplication-navbutton-color" content="#212121" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#212121" />
 
 	<!-- Web Fonts 
 	================================================== -->
-	<link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
-	
+	<link
+		href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese"
+		rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
+		rel="stylesheet">
+
 	<!-- CSS
 	================================================== -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/animsition.min.css"/>
-	<link rel="stylesheet" href="css/swiper.min.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/animsition.min.css" />
+	<link rel="stylesheet" href="css/swiper.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
 
 	<!-- Favicons
 	================================================== -->
@@ -51,15 +59,16 @@
 	<link rel="apple-touch-icon" href="apple-touch-icon.jpg">
 	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.jpg">
 	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.jpg">
-	
+
 </head>
+
 <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 
 	<!-- Page preloader wrap
 	================================================== -->
 
 	<div class="animsition">
-		
+
 		<!-- Nav and Logo
 		================================================== -->
 
@@ -75,28 +84,31 @@
 						<span class="menu-icon__line menu-icon__line-left"></span>
 						<span class="menu-icon__line"></span>
 						<span class="menu-icon__line menu-icon__line-right"></span>
-					</div>					
-				</div>					
-			</div>				
+					</div>
+				</div>
+			</div>
 		</header>
 
 		<div class="nav">
 			<div class="nav__content">
 				<div class="curent-page-name-shadow">About</div>
 				<ul class="nav__list">
-					<li class="nav__list-item active-nav"><a href="index.html" class="hover-target animsition-link">About</a></li>
+					<li class="nav__list-item active-nav"><a href="index.html"
+							class="hover-target animsition-link">About</a></li>
 					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
-					<li class="nav__list-item"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
+					<li class="nav__list-item"><a href="projects.html" class="hover-target animsition-link">Projects</a>
+					</li>
+					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a>
+					</li>
 				</ul>
 			</div>
-		</div>	
+		</div>
 
 		<!-- Primary Page Layout
-		================================================== -->	
+		================================================== -->
 
 		<div class="shadow-title parallax-top-shadow">About</div>
-		
+
 		<div class="section padding-page-top padding-bottom over-hide z-bigger">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
@@ -104,17 +116,20 @@
 						<div class="col-12 parallax-fade-top ">
 							<h1>Hello, I'm Chinmay Mulay.</h1>
 						</div>
-  					</h1>
+					</h1>
 					<div class="offset-1 col-11 parallax-fade-top mt-2 mt-sm-3">
-							<p style="color:#1E90FF" class="typewrite" data-period="1500" data-type='[ "I&apos;m a CS Student", "I&apos;m a tech enthusiast.", "I like to explore, learn new things." ]'></p>
+						<p style="color:#1E90FF" class="typewrite" data-period="1500"
+							data-type='[ "I&apos;m a CS Student", "I&apos;m a tech enthusiast.", "I like to explore, learn new things." ]'>
+						</p>
 					</div>
 				</div>
 				<div class="col-lg-7 padding-top" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 					<blockquote class="blockquote">
-						<p class="lead-big color-white mb-0"><em>Let's invent tomorrow, rather than worrying about what happened yesterday.</em></p>
+						<p class="lead-big color-white mb-0"><em>Let's invent tomorrow, rather than worrying about what
+								happened yesterday.</em></p>
 						<h6 class="mt-5"> - Steve Jobs</h6>
 					</blockquote>
-				</div>	
+				</div>
 			</div>
 		</div>
 
@@ -122,62 +137,100 @@
 			<div class="container">
 				<div class="row px-5 px-xl-2">
 					<div class="col-12 padding-top">
-						<h3>What I can do</h3>	
+						<h3>What I can do</h3>
 					</div>
 					<div class="col-12 mt-2 mb-5 page-title-small">
-						<p class="mb-0 pb-0">Hands on </p>	
-					</div>	
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">	
-						<ul class="studio-list">
-							<li><p>C | CPP</p></li>
-							<li><p>HTML CSS </p></li>
-							<li><p>JS PHP</p></li>
-							<li><p>Java | Advance Java</p></li>
-							<li><p>VB.NET</p></li>
-						</ul>	
-					</div>	
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">	
-						<ul class="studio-list">
-							<li><p>Google Assistant Developer</p></li>
-							<li><p>Android Developer [Java]</p></li>
-							<li><p>iOS Developer [Swift 5 - Moderate]</p></li>
-							<li><p>Python Developer</p></li>
-							<li><p>Machine Learning</p></li>
-						</ul>	
+						<p class="mb-0 pb-0">Hands on </p>
 					</div>
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">	
+					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">
 						<ul class="studio-list">
-							<li><p>Database: MySQL, Access, Oracle, SQLite</p></li>
-							<li><p>Database: Firebase, AWS, MongoDB [Beginner]</p></li>
-							<li><p>Video Editing [FCPX & Adobe Premiere Pro]</p></li>
-							<li><p>Audio Production [Adobe Audition]</p></li>
-							<li><p>Designer [Adobe Illustrator & Adobe XD]</p></li>
-						</ul>	
+							<li>
+								<p>C | CPP</p>
+							</li>
+							<li>
+								<p>HTML CSS </p>
+							</li>
+							<li>
+								<p>JS PHP</p>
+							</li>
+							<li>
+								<p>Java | Advance Java</p>
+							</li>
+							<li>
+								<p>VB.NET</p>
+							</li>
+						</ul>
 					</div>
-				</div>		
-			</div>				
+					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">
+						<ul class="studio-list">
+							<li>
+								<p>Google Assistant Developer</p>
+							</li>
+							<li>
+								<p>Android Developer [Java]</p>
+							</li>
+							<li>
+								<p>iOS Developer [Swift 5 - Moderate]</p>
+							</li>
+							<li>
+								<p>Python Developer</p>
+							</li>
+							<li>
+								<p>Machine Learning</p>
+							</li>
+						</ul>
+					</div>
+					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">
+						<ul class="studio-list">
+							<li>
+								<p>Database: MySQL, Access, Oracle, SQLite</p>
+							</li>
+							<li>
+								<p>Database: Firebase, AWS, MongoDB [Beginner]</p>
+							</li>
+							<li>
+								<p>Video Editing [FCPX & Adobe Premiere Pro]</p>
+							</li>
+							<li>
+								<p>Audio Production [Adobe Audition]</p>
+							</li>
+							<li>
+								<p>Designer [Adobe Illustrator & Adobe XD]</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
-			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">Say Hello</div>
+			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">Say Hello
+			</div>
 			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
 				<div class="row">
 					<div class="col-12 text-center z-bigger py-5">
 						<div class="footer-lines">
-							<a href="contact.html" class="hover-target animsition-link"><h4>Have a Project?</h4></a>
+							<a href="contact.html" class="hover-target animsition-link">
+								<h4>Have a Project?</h4>
+							</a>
 						</div>
 					</div>
 				</div>
-			</div>		
-		</div>	
-		
+			</div>
+		</div>
+
 		<!-- Social links
 		================================================== -->
-		
+
 		<div class="social-fixed">
-			<i class="hover-target fa fa-github" aria-hidden="true">
-				<a href="https://github.com/cmulay" class="hover-target"> GitHub</a>
-			</i>
+			<p>
+				<i class="hover-target fa fa-github" aria-hidden="true">
+					<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
+				</i>
+				<i class="hover-target fa fa-linkedin" aria-hidden="true">
+					<a href="https://" class="hover-target">LinkedIn</a>
+				</i>
+			</p>
 		</div>
 		<div class="copyr">
 			2020 &copy; <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
@@ -185,23 +238,24 @@
 		<div class="scroll-to-top hover-target"></div>
 		<!-- Page cursor
 		================================================== -->
-		
-        <div class='cursor' id="cursor"></div>
-        <div class='cursor2' id="cursor2"></div>
-        <div class='cursor3' id="cursor3"></div>		
-		
+
+		<div class='cursor' id="cursor"></div>
+		<div class='cursor2' id="cursor2"></div>
+		<div class='cursor3' id="cursor3"></div>
+
 	</div>
 
 	<!-- JAVASCRIPT
     ================================================== -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/typewrite.js"></script>
-	<script src="js/popper.min.js"></script> 
+	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/plugins.js"></script> 
-	<script src="js/custom.js"></script>  
+	<script src="js/plugins.js"></script>
+	<script src="js/custom.js"></script>
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
