--- a/p2_to-do-app.html
+++ b/p2_to-do-app.html
@@ -1,16 +1,20 @@
 ﻿<!DOCTYPE html>
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]>
-<!--><html class="no-js" lang="en"><!--<![endif]-->
+<!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
 	<title>To-Do App</title>
-	<meta name="description"  content="Chinmay Mulay's Portfolio" />
+	<meta name="description" content="Chinmay Mulay's Portfolio" />
 	<meta name="author" content="Chinmay Mulay">
-	<meta name="keywords"  content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
+	<meta name="keywords"
+		content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
 	<meta property="og:title" content="Chinmay Mulay's Portfolio" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="" />
@@ -28,75 +32,84 @@
 	<!-- Mobile Specific Metas
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="theme-color" content="#212121"/>
-    <meta name="msapplication-navbutton-color" content="#212121"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="#212121"/>
+	<meta name="theme-color" content="#212121" />
+	<meta name="msapplication-navbutton-color" content="#212121" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#212121" />
 
 	<!-- Web Fonts 
 	================================================== -->
-	<link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
-	
+	<link
+		href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese"
+		rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
+		rel="stylesheet">
+
 	<!-- CSS
 	================================================== -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/animsition.min.css"/>
-	<link rel="stylesheet" href="css/swiper.min.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-			
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/animsition.min.css" />
+	<link rel="stylesheet" href="css/swiper.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
+
 	<!-- Favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.jpg">
 	<link rel="apple-touch-icon" href="apple-touch-icon.jpg">
 	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.jpg">
 	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.jpg">
-	
-	
+
+
 </head>
+
 <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 
 	<!-- Page preloader wrap
 	================================================== -->
 
-	<div class="animsition">	
-		
+	<div class="animsition">
+
 		<!-- Nav and Logo
 		================================================== -->
 
-		<header class="cd-header cursor-show">
+		<header class="cd-header">
 			<div class="header-wrapper">
 				<div class="logo-wrap">
 					<a href="index.html" class="hover-target animsition-link">
 						<h6 class="fullscreen-image no-blur" style="font-weight: 1000;">The Guy with Glasses</h6>
+					</a>
 				</div>
 				<div class="nav-but-wrap">
 					<div class="menu-icon hover-target">
 						<span class="menu-icon__line menu-icon__line-left"></span>
 						<span class="menu-icon__line"></span>
 						<span class="menu-icon__line menu-icon__line-right"></span>
-					</div>					
-				</div>					
-			</div>				
+					</div>
+				</div>
+			</div>
 		</header>
 
 		<div class="nav">
 			<div class="nav__content">
-				<div class="curent-page-name-shadow">Projects</div>
+				<div class="curent-page-name-shadow">Project 2</div>
 				<ul class="nav__list">
 					<li class="nav__list-item"><a href="index.html" class="hover-target animsition-link">About</a></li>
 					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
-					<li class="nav__list-item active-nav"><a href="projects.html" class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a></li>
+					<li class="nav__list-item active-nav"><a href="projects.html"
+							class="hover-target animsition-link">Projects</a>
+					</li>
+					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a>
+					</li>
 				</ul>
 			</div>
-		</div>	
+		</div>
 
 		<!-- Primary Page Layout
-		================================================== -->	
+		================================================== -->
 
 		<div class="shadow-title parallax-top-shadow">To-Do-App</div>
-		
+
 		<div class="section padding-page-top padding-bottom over-hide z-bigger">
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
@@ -111,107 +124,134 @@
 			<div class="container">
 				<div class="row px-5 px-xl-2 justify-content-center">
 					<div class="col-lg-8 mb-5 text-center">
-						<p class="mb-0 pb-0 lead">As the name suggests, To-Do App is a clean, modular looking To-Do list making app.</p>
+						<p class="mb-0 pb-0 lead">As the name suggests, To-Do App is a clean, modular looking To-Do list
+							making app.</p>
 					</div>
 					<div class="col-lg-12 mb-5 text-center">
 						<h5 class="mb-3" style="font-weight: bold; font-size: x-large"><u>Features</u></h5>
 					</div>
-					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h5 class="mb-3">To-Do Space</h5>
-						<p class="mb-0 pb-0">Browse all your to-do's at one place, makes it available right when you need them.</p>	
+						<p class="mb-0 pb-0">Browse all your to-do's at one place, makes it available right when you
+							need them.</p>
 					</div>
-					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h5 class="mb-3">Data and Security</h5>
-						<p class="mb-0 pb-0">All to-do's are saved on your Local Machine.</p>	
+						<p class="mb-0 pb-0">All to-do's are saved on your Local Machine.</p>
 					</div>
-					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h5 class="mb-3">100% Secure</h5>
-						<p class="mb-0 pb-0"> Your work, your business (No Cloud Connectivity)</p>	
+						<p class="mb-0 pb-0"> Your work, your business (No Cloud Connectivity)</p>
 					</div>
 
-					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3">Strike To-Do</h5>	
-						<p class="mb-0 pb-0"> Strike To-Do when done with your task.</p>	
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3">Strike To-Do</h5>
+						<p class="mb-0 pb-0"> Strike To-Do when done with your task.</p>
 					</div>
-					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h5 class="mb-3">Sorted To-Do</h5>
-						<p class="mb-0 pb-0">To-Do Default order set to First in First Order, manual priority control.</p>	
+						<p class="mb-0 pb-0">To-Do Default order set to First in First Order, manual priority control.
+						</p>
 					</div>
-					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-						<h5 class="mb-3">Delete To-Do</h5>	
-						<p class="mb-0 pb-0"> Deletes permanently.</p>	
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+						<h5 class="mb-3">Delete To-Do</h5>
+						<p class="mb-0 pb-0"> Deletes permanently.</p>
 					</div>
 
 					<div class="col-lg-12 mb-5 text-center">
 						<h5 class="mb-3" style="font-weight: bold; font-size: x-large;"><u>How to use</u></h5>
 					</div>
 					<div class="col-lg-10 mb-5 text-center">
-						<p class="mb-0 pb-0 lead">1. In the textbox note your To-Do and hit enter to add it to your list. <br/>2. Left click on the To-Do to mark it as done. <br/>3. Right click on the To-Do to delete it.</p>
+						<p class="mb-0 pb-0 lead">1. In the textbox note your To-Do and hit enter to add it to your
+							list. <br />2. Left click on the To-Do to mark it as done. <br />3. Right click on the To-Do
+							to delete it.</p>
 					</div>
 
 					<div class="col-lg-12 mb-5 text-center">
 						<h5 class="mb-3" style="font-weight: bold; font-size: x-large;"><u>Project Studio</u></h5>
 						<div class="img-wrap">
 							<img src="img/projects/todo_app/homepage.png" alt="To-Do Screenshot">
-						</div>	
+						</div>
 					</div>
-						
-					
+
+
 					<div class="col-lg-10 mb-5 text-center">
-						<p class="mb-0 pb-0 lead">This project is currently closed. But might see some improvements in it's functionality, working and UI overal. It is mobile friendly as well.<br/> This project is <a href="https://github.com/cmulay/To-Do-App/blob/master/LICENSE"> licensed </a>under MIT.</p>
+						<p class="mb-0 pb-0 lead">This project is currently closed. But might see some improvements in
+							it's functionality, working and UI overal. It is mobile friendly as well.<br /> This project
+							is <a href="https://github.com/cmulay/To-Do-App/blob/master/LICENSE"> licensed </a>under
+							MIT.</p>
 					</div>
-					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h5 class="mb-3"><a href="https://github.com/cmulay/To-Do-App.git">Visit Project Repo</a></h5>
 					</div>
-					<div class="col-md-4 mb-5 text-center" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+					<div class="col-md-4 mb-5 text-center"
+						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h5 class="mb-3"><a href="https://cmulay-todoapp.netlify.app/">Preview Project</a></h5>
 					</div>
-				</div>		
-			</div>			
+				</div>
+			</div>
 		</div>
-		
+
 		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
-			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">GitHub Profiles</div>
+			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">GitHub
+				Profiles</div>
 			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
 				<div class="row">
 					<div class="col-12 text-center z-bigger py-5">
 						<div class="footer-lines">
-							<a href="p3_github-profiles.html" class="hover-target animsition-link"><h4>Next Project</h4></a>
+							<a href="p3_github-profiles.html" class="hover-target animsition-link">
+								<h4>Next Project</h4>
+							</a>
 						</div>
 					</div>
 				</div>
-			</div>		
-		</div>	
-		
+			</div>
+		</div>
+
 		<!-- Social links
 		================================================== -->
-		
-		<div class="social-fixed fa fa-github">
-			<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
+
+		<div class="social-fixed">
+			<p>
+				<i class="hover-target fa fa-github" aria-hidden="true">
+					<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
+				</i>
+				<i class="hover-target fa fa-linkedin" aria-hidden="true">
+					<a href="https://" class="hover-target">LinkedIn</a>
+				</i>
+			</p>
 		</div>
 		<div class="copyr">
-			2020 © <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
+			2020 &copy; <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
 		</div>
 		<div class="scroll-to-top hover-target"></div>
-		
+
 		<!-- Page cursor
 		================================================== -->
-		
-        <div class='cursor' id="cursor"></div>
-        <div class='cursor2' id="cursor2"></div>
-        <div class='cursor3' id="cursor3"></div>		
-		
+
+		<div class='cursor' id="cursor"></div>
+		<div class='cursor2' id="cursor2"></div>
+		<div class='cursor3' id="cursor3"></div>
+
 	</div>
-	
+
 	<!-- JAVASCRIPT
     ================================================== -->
 	<script src="js/jquery.min.js"></script>
-	<script src="js/popper.min.js"></script> 
+	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/plugins.js"></script> 
-	<script src="js/custom.js"></script>  
+	<script src="js/plugins.js"></script>
+	<script src="js/custom.js"></script>
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
