fixed linking issue in social section

--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
 						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h2 class="mb-3 fa fa-linkedin"></h2>
 						<h5 class="mb-3">LinkedIn</h5>
-						<p class="mb-0 pb-0"><a href="www.linkedin.com/in/cmulay17">@cmulay17</a></p>
+						<p class="mb-0 pb-0"><a href="https://www.linkedin.com/in/cmulay17/">@cmulay17</a></p>
 					</div>
 
 				</div>
