--- a/blog.html
+++ b/blog.html
@@ -181,10 +181,11 @@
 					<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
 				</i>
 				<i class="hover-target fa fa-linkedin" aria-hidden="true">
-					<a href="https://" class="hover-target">LinkedIn</a>
+					<a href="https://www.linkedin.com/in/cmulay17/" class="hover-target">LinkedIn</a>
 				</i>
 			</p>
 		</div>
+
 		<div class="copyr">
 			2020 &copy; <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
 		</div>
