--- a/p1_notes-app.html
+++ b/p1_notes-app.html
@@ -222,7 +222,7 @@
 					<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
 				</i>
 				<i class="hover-target fa fa-linkedin" aria-hidden="true">
-					<a href="https://" class="hover-target">LinkedIn</a>
+					<a href="https://www.linkedin.com/in/cmulay17/" class="hover-target">LinkedIn</a>
 				</i>
 			</p>
 		</div>
