--- a/contact.html
+++ b/contact.html
@@ -171,20 +171,20 @@
 						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h2 class="mb-3 fa fa-instagram"></h2>
 						<h5 class="mb-3">Instagram</h5>
-						<p class="mb-0 pb-0"><a
-								href="https://www.instagram.com/_theguywithglasses_">@_theguywithglasses_</a></p>
+						<h6 class="mb-0 pb-0"><a
+								href="https://www.instagram.com/_theguywithglasses_">@_theguywithglasses_</a></h6>
 					</div>
 					<div class="col-md-4 mb-5 text-center"
 						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h2 class="mb-3 fa fa-github"></h2>
 						<h5 class="mb-3">GitHub</h5>
-						<p class="mb-0 pb-0"><a href="https://www.github.com/cmulay">@cmulay</a></p>
+						<h6 class="mb-0 pb-0"><a href="https://www.github.com/cmulay">@cmulay</a></h6>
 					</div>
 					<div class="col-md-4 mb-5 text-center"
 						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h2 class="mb-3 fa fa-linkedin"></h2>
 						<h5 class="mb-3">LinkedIn</h5>
-						<p class="mb-0 pb-0"><a href="https://www.linkedin.com/in/cmulay17/">@cmulay17</a></p>
+						<h6 class="mb-0 pb-0"><a href="https://www.linkedin.com/in/cmulay17/">@cmulay17</a></h6>
 					</div>
 
 				</div>
