--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<ul class="nav__list">
 					<li class="nav__list-item active-nav"><a href="index.html"
 							class="hover-target animsition-link">About</a></li>
-					<li class="nav__list-item"><a href="blog" class="hover-target animsition-link">Blog</a></li>
+					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
 					<li class="nav__list-item"><a href="projects.html" class="hover-target animsition-link">Projects</a>
 					</li>
 					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a>
