--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 	<meta property="og:site_name" content="" />
 	<meta property="og:description" content="Chinmay Mulay's Portfolio" />
 	<meta name="twitter:card" content="" />
-	<meta name="twitter:site" content="https://twitter.com/chinmaymulay17" />
+	<meta name="twitter:site" content="https://twitter.com/cmulay17" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:description" content="Chinmay Mulay's Portfolio" />
 	<meta name="twitter:image" content="" />
