--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					</h1>
 					<div class="offset-1 col-11 parallax-fade-top mt-2 mt-sm-3">
 						<p style="color:#1E90FF" class="typewrite" data-period="1500"
-							data-type='[ "I&apos;m a CS Student", "I&apos;m a tech enthusiast.", "I like to explore, learn new things." ]'>
+							data-type='[ "I&apos;m a Student", "I&apos;m a Developer", "I&apos;m an Entrepreneur"]'>
 						</p>
 					</div>
 				</div>
