--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
 					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
 					<li class="nav__list-item active-nav"><a href="projects.html"
 							class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a>
+					<li class="nav__list-item"><a href="contact.php" class="hover-target animsition-link">Contact</a>
 					</li>
 				</ul>
 			</div>
