removed php contact form

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
 					<li class="nav__list-item "><a href="projects.html"
 							class="hover-target animsition-link">Projects</a></li>
-					<li class="nav__list-item active-nav"><a href="contact.php"
+					<li class="nav__list-item active-nav"><a href="contact.html"
 							class="hover-target animsition-link">Contact</a></li>
 				</ul>
 			</div>
@@ -127,55 +127,7 @@
 
 		<div class="section padding-bottom-big over-hide z-bigger">
 			<div class="container">
-				<div class="row px-5 px-xl-2">
-					<form method="post" class="col-lg-12" action="contact_me.php">
-						<div class="col-lg-12">
-							<div class="row ajax-form">
-								<div class="col-md-6">
-									<input class="hover-target" name="name" type="text" placeholder="Your Name: *"
-										autocomplete="off" />
-								</div>
-								<div class="col-md-6 mt-4 mt-md-0">
-									<input class="hover-target" name="email" type="email" placeholder="E-Mail: *"
-										autocomplete="off" />
-								</div>
-								<div class="col-md-6 mt-4">
-									<input class="hover-target" name="phone" type="tel" placeholder="Phone Number:"
-										autocomplete="off" />
-								</div>
-								<div class="col-md-6 mt-4">
-									<input class="hover-target" name="location" type="text" placeholder="City, Country:"
-										autocomplete="off" />
-								</div>
-								<div class="col-md-12 mt-4">
-									<textarea class="hover-target" name="message" placeholder="Message *"></textarea>
-								</div>
-								<div class="col-md-12 mt-4">
-									<center>
-										<button class="hover-target" id="send" data-lang="en"
-											name="send"><span>submit</span></button>
-									</center>
-								</div>
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-		
-		<script type="text/JavaScript">
-			if (window.history.replaceState) {
-					indow.history.replaceState(null, null, window.location.href);
-				}
-		</script>
-
-		<div class="section padding-bottom-big over-hide z-bigger" oncontextmenu="return false"
-			onkeydown="return false;" onmousedown="return false;">
-			<div class="container">
 				<div class="row px-5 px-xl-2 justify-content-center">
-					<div class="col-lg-12 mb-5 text-center">
-						<h5 class="mb-3" style="font-weight: bold; font-size: x-large"><u>Social Handles</u></h5>
-					</div>
 					<div class="col-md-4 mb-5 text-center"
 						data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<h2 class="mb-3 fa fa-instagram"></h2>
@@ -195,7 +147,6 @@
 						<h5 class="mb-3">LinkedIn</h5>
 						<h6 class="mb-0 pb-0"><a href="https://www.linkedin.com/in/cmulay17/">@cmulay17</a></h6>
 					</div>
-
 				</div>
 			</div>
 		</div>
