--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<li class="nav__list-item"><a href="blog.html" class="hover-target animsition-link">Blog</a></li>
 					<li class="nav__list-item"><a href="projects.html" class="hover-target animsition-link">Projects</a>
 					</li>
-					<li class="nav__list-item"><a href="contact.php" class="hover-target animsition-link">Contact</a>
+					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -210,7 +210,7 @@
 				<div class="row">
 					<div class="col-12 text-center z-bigger py-5">
 						<div class="footer-lines">
-							<a href="contact.php" class="hover-target animsition-link">
+							<a href="contact.html" class="hover-target animsition-link">
 								<h4>Have a Project?</h4>
 							</a>
 						</div>
