Update projectes list

--- a/projects.html
+++ b/projects.html
@@ -124,8 +124,13 @@
 					</a>
 				</li>
 				<li class="swiper-slide full-height case-study-name">
-					<a href="p4_python_automation.html" class="hover-target animsition-link">
-						<h1>Python Automation Script</h1>
+					<a href="p4_pdf_to_audio.html" class="hover-target animsition-link">
+						<h1>PDFtoAudio</h1>
+					</a>
+				</li>
+				<li class="swiper-slide full-height case-study-name">
+					<a href="https://github.com/cmulay?tab=repositories" class="hover-target animsition-link">
+						<h1>More..</h1>
 					</a>
 				</li>
 			</ul>
@@ -142,7 +147,7 @@
 				<div class="img-hero-background no-blur"></div>
 				<h2 class="fullscreen-image no-blur">Notes App</h2>
 				<div class="hero-number">01</div>
-				<div class="hero-number-fixed">04</div>
+				<div class="hero-number-fixed">05</div>
 			</li>
 			<li>
 				<div class="img-hero-background no-blur"></div>
@@ -158,6 +163,11 @@
 				<div class="img-hero-background no-blur"></div>
 				<h2 class="fullscreen-image no-blur">Python Automation Script</h2>
 				<div class="hero-number">04</div>
+			</li>
+			<li>
+				<div class="img-hero-background no-blur"></div>
+				<h2 class="fullscreen-image no-blur">More..</h2>
+				<div class="hero-number">05</div>
 			</li>
 		</ul>
 
